tests/ui/parser/raw/raw-byte-string-eof.rs
pub fn main() {
    br##"a"#;  //~ unterminated raw string
}
